# onchain-sleuth

./: .env.example  .gitignore  .nojekyll  CLAUDE.md  README.md  _quarto.yml  docker-compose.yml  index.html  index.qmd  index.xml  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: quarto-publish.yml
dbt_subprojects/: shared_sources.yml
dbt_subprojects/macros/: README.md  contract_metadata.sql  ethereum_utils.sql  event_decoding.sql
dbt_subprojects/marts/: README.md  dbt_project.yml  profiles.yml
dbt_subprojects/staging/: .user.yml  dbt_project.yml  profiles.yml
examples/: defillama.py  open.html  open.ipynb  usage_example.py
examples/OPEN/: contract_addresses.json  data.py  open.ipynb  open.py
examples/helpers/: README_plotting.html  README_plotting.md  dataloader.py  plotting.py
examples/open/: contract_addresses.json  data.py  eda.html
hunt/: stablecoins.html  stablecoins.ipynb  yieldbasis.html
notebooks/: crvusd_health.html  crvusd_health.ipynb  ethena.html  ethena.ipynb  open.html  open.ipynb
notebooks/stablecoins/: e.html  e.ipynb
old/: etherscan.py
resource/: chainid.json  crvusd.json  curve_deployment_data.json  protocol_mapping.json
resource/abi/: 0x19F5B81e5325F882C9853B5585f74f751DE3896d.json  0xb556FA4C4752321B3154f08DfBDFCF34847f2eac.json
scripts/: crvusd_pipeline.py  dedup_raw_tables.sql  helper.py  open.py  run_dbt.sh  run_etherscan.py  run_llama.py
scripts/extraction/: contracts.json  runner.py
tests/: run_etherscan.py  run_llama.py  simple.py
(+107 files in other folders)
